--- a/skyrsla/hardware.tex
+++ b/skyrsla/hardware.tex
@@ -5,10 +5,16 @@ Hér skal gera töflu eða lista yfir allan búnað sem notaður er gott væri a
 \begin{tabular}{ |c|c|c| } 
  \hline
  Vél/rafbúnaður &Spenna &Viðnám\\ 
- Arduino uno & &\\ 
- MQ7 &5V & 33ohm \\ 
- Breadboard & & \\
- Vex 239 motor & 7,2V & \\
+ Laser Module - Green & &\\
+ SparkFun XBee Explorer Dongle  & &\\ 
+ GPS Receiver - GP-20U7 (56 Channel)  & &  \\ 
+ XBee 1mW Wire Antenna - Series 1 (802.15.4) & & \\
+ SparkFun RedBoard - Programmed with Arduino  & & \\
+ 9V Battery Holder & & \\
+ JST to Breadboard Jumper (3-pin)  & & \\
+ Arduino Stackable Header Kit & & \\
+ Arduino Stackable Header - 10 Pin & & \\
+ Servo - Hitec HS-625MG (Standard Size) & & \\
  \hline
 \end{tabular}
 \end{center}
