--- a/skyrsla/hardware.tex
+++ b/skyrsla/hardware.tex
@@ -1,14 +1,21 @@
-\section{Vélbúnaður}
-Hér skal gera töflu eða lista yfir allan búnað sem notaður er gott væri að þið nýttuð ykkur töfluna hér fyrir neðan:
+﻿\section{Vélbúnaður}
+Hér er tafla fyrir allan búnað sem við notum:
 
 \begin{center}
 \begin{tabular}{ |c|c|c| } 
  \hline
  Vél/rafbúnaður &Spenna &Viðnám\\ 
- Arduino uno & &\\ 
- MQ7 &5V & 33ohm \\ 
- Breadboard & & \\
- Vex 239 motor & 7,2V & \\
+ XBee Explorer Dongle | WRL-11697 \\
+ Laser Module - Green | COM-09906 \\
+ 2x GPS Receiver - GP-20U7(56 Channel) | GPS-13740 \\
+ 2x XBee 1mW Wire Antenna - Series 1 (802.15.4) | WRL-08665 \\
+ 2x XBee Shield | WRL-12847 \\
+ 2x RedBoard - Programmed with Arduino | DEV-12757 \\
+ 2x 9V Battery Holder | PRT -10512 \\
+ 3x JST to Breadboard Jumper (3-pin) | CAB-13685 \\
+ 2x Arduino Stackable Header Kit | PRT-10007 \\
+ 2x Arduino Stackable Header - 10 pin | PRT-11376 \\
+ Servo - Hitec HS-625MG (Standard Size) | ROB-11885 \\
  \hline
 \end{tabular}
 \end{center}
