--- a/skyrsla/timeplan.tex
+++ b/skyrsla/timeplan.tex
@@ -1,5 +1,5 @@
-\section{Verkáætlun}
-Hér skal gera verkáætlun og tímaáætlun, setja in mynd af henni gerð í https://draw.io veljið Flocharts-gant .  þegar þið hafið lokið við grafið farið í export-image og vistið sem `gant` í skyrsla/img
+﻿\section{Verkáætlun}
+Hér er tímaáætlunin okkar sem við fylgjum eftir bestu getu:
 \begin{figure}[h]
 \includegraphics[scale=.3]{img/gant}
 \end{figure}
