--- a/skyrsla/timeplan.tex
+++ b/skyrsla/timeplan.tex
@@ -1,5 +1,5 @@
 ﻿\section{Verkáætlun}
-Hér er tímaáætlunin okkar sem við fylgjum eftir bestu getu:
+Við byrjum á hugflæði, gerum svo lýsingu á verkefninu og líka gant ritið. Svo gerum við sauðakóða og förum að vinna í að setja róbotinn samann og gerum prófanir.
 \begin{figure}[h]
 \includegraphics[scale=.3]{img/gant}
 \end{figure}
