--- a/skyrsla/mybib.tex
+++ b/skyrsla/mybib.tex
@@ -1,15 +1,11 @@
   \begin{thebibliography}{1}
 
-  \bibitem{Arduino} Arduino staff {\em http://wwww.arduino.cc introduction}  	  2016.
+  \bibitem{Arduino} GPS Differential Vector Pointer {\em https://learn.sparkfun.com/tutorials/gps-differential-vector-pointer}
 
-  \bibitem{impj}  The Japan Reader {\em Imperial Japan 1800-1945} 1973:
-  Random House, N.Y.
+  \bibitem{fo} GPS Build Partar {\em https://www.sparkfun.com/wish_lists/127535?_ga=1.178491748.1939121148.1485332669}
 
-  \bibitem{norman} E. H. Norman {\em Japan's emergence as a modern
-  state} 1940: International Secretariat, Institute of Pacific
-  Relations.
+  \bibitem{GPS}  GPS Tenging {\em http://www.instructables.com/id/Connecting-GPS-module-to-Arduino/}
 
-  \bibitem{fo} Bob Tadashi Wakabayashi {\em Anti-Foreignism and Western
-  Learning in Early-Modern Japan} 1986: Harvard University Press.
+  \bibitem{Squarebot} The Squarebot 4.0 Build {\em http://www.education.rec.ri.cmu.edu/content/vex/building/media/squarebot4.pdf}
 
   \end{thebibliography}
