Uppfærði testing.tex

--- a/skyrsla/testing.tex
+++ b/skyrsla/testing.tex
@@ -1,2 +1,4 @@
 \section{Prófanir}
-Hér skal gera lýsingu á prófunum á kerfinu . Til dæmis ef þið eruð með Arduino sem vefþjónn sem byrtir gildi frá hitamæli, rakamæli og gas mæli þá gæti prófunin verið svona: 1. prófun á vef, 2. prófun á hitamæli, .prófun á gasmæli hvert og eitt prófað sér áður en allt er sett saman og þá er gerð prófun á öllu kerfinu
+Við byrjuðum á því að testa GPS, en fengum hann aldrei til þess að virka. Við skiptum þess vegna um verkefni og settum saman Vex robot. Það sem við testuðum í því var fjarstýring, motors, og kóðinn sjálfur.
+
+Við byrjuðum á að búa til kóða sem lætur róbotinn keyra áfram þegar ýtt er á takka á fjarstýringunni, þegar við fengum það til að virka þá gátum við látið hann bakka með öðrum takka. Svo Stýringar með einum stýripinna.
